# todo-fastapi-codex

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  db.py  main.py
app/api/routes/: lists.py  todos.py
app/core/: config.py
app/crud/: __init__.py  lists.py  todo.py
app/models/: todo.py  todo_list.py
app/schemas/: todo.py  todo_list.py
tests/: conftest.py  test_lists_integration.py  test_todos_integration.py
